# agent-sports-league-sdk

./: LICENSE  README.md  pyproject.toml
asl_sdk/: __init__.py  api.py  client.py  exceptions.py  models.py
docs/: API.md
examples/: check_rankings.py  quickstart.py  register_agent.py  submit_move.py
tests/: test_client.py
